2012-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el (pop3-wait-for-messages): Fix retrieved data size calculation.

2012-04-19  Juanma Barranquero  <lekktu@gmail.com>

	* tls.el (open-tls-stream): Remove unused binding.

2012-04-16  Glenn Morris  <rgm@gnu.org>

	* nndraft.el (nndraft-request-list): Fix declaration.

2012-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-buffer): Doc fix.

	* gnus-msg.el (gnus-inews-insert-gcc): Don't do the alist stuff when we
	don't have a current group.

	* gnus-sum.el (gnus-handle-ephemeral-exit): Avoid creating the group
	buffer if it doesn't exist.

	* gnus-group.el (gnus-group-read-ephemeral-group): If no quit-config is
	given, mark the group as ephemeral with the current window conf.

	* gnus-sum.el (gnus-set-global-variables): Don't assume that the group
	buffer exists, which it doesn't if we haven't started Gnus.
	(gnus-summary-exit): Allow quitting when we don't have a group buffer.

2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mml.el (mml-generate-mime): Allow specifying what the top-level part
	type is.

	* gnus-start.el (gnus-clean-old-newsrc): Remove totally bogus
	`unexists' entries.
	(gnus-clean-old-newsrc): Fix last checkin.

	* nnimap.el (nnimap-update-info): None of the articles below the active
	low-water mark exist.

	* dgnushack.el: Get rid of XEmacs compilation warning.

	* gnus-msg.el (gnus-summary-cancel-article): See what From header we
	would have gotten if we posted to the group, and use that to compare
	against the message we want to cancel (bug#10808).

	* gnus-sum.el (gnus-auto-center-summary): `scroll-margin' isn't defined
	on XEmacs.

2012-04-10  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-sum.el (gnus-auto-center-summary): Set default to respect
	`scroll-margin'.

2012-04-10  Elias Oltmanns  <eo@nebensachen.de>  (tiny change)

	* gnus-cite.el (gnus-dissect-cited-text): A single line without